--- a/moviesapp/views/moviespage.ejs
+++ b/moviesapp/views/moviespage.ejs
@@ -1,5 +1,9 @@
+<%- include('partials/header'); -%>
+
 <h1>Results Page</h1>
 
 <% moviesDic["Search"].forEach(function(movie) { %>
   <li> <%= movie["Title"] %> </li>
 <% }); %>
+
+<%- include('partials/footer'); -%>
