--- a/moviesapp/views/search.ejs
+++ b/moviesapp/views/search.ejs
@@ -1,6 +1,20 @@
-<h1>Search Page</h1>
+<%- include('partials/header'); -%>
 
-<form action="/movies" method="GET">
-    Termino a incluir:<input type="text" name="abuscar" placeholder="Search Term"></input>
-    <button>Enviar</button>
-</form>
+<div class="container">
+    <div class="jumbotron">
+        <h1 style="text-align: center">Search Page</h1>
+    </div>
+    
+    <div style="width: 30%; margin: 25px auto">
+        <form action="/movies" method="GET">
+            <div class="form-group">
+                <input class="form-control" type="text" name="abuscar" placeholder="Search Term"></input>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-lg btn-primary btn-block">Enviar</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<%- include('partials/footer'); -%>
