--- a/moviesapp/views/partials/header.ejs
+++ b/moviesapp/views/partials/header.ejs
@@ -4,3 +4,18 @@
 	<title>APP MOVIES</title>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
 </head>
+<body>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href ="/">Search</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/">Login</a></li>
+                    <li><a href="/">Sign Up</a></li>
+                    <li><a href="/">Log Out</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
