--- a/apppost/views/friendspage.ejs
+++ b/apppost/views/friendspage.ejs
@@ -1,10 +1,16 @@
 <h1>Friends List</h1>
 
 <% friendsVar.forEach(function(friend){ %>
-   <li><%= friend  %></li>
+   <li><%= friend.name  %> <a href="/friends/<%=friend._id%>">Mas Info!</a> </li> </br>
 <% }); %>
 
+</br>
+</br>
+</br>
+
 <form action="/addFriend" method="POST">
-  <input type="text" name="newfriend" placeholder="Friend name"></label>
+  <input type="text" name="newfriend" placeholder="Friend name"></label> </br>
+  <input type="text" name="newage" placeholder="Friend age"></label> </br>
+  <input type="text" name="newskill" placeholder="Friend skill"></label> </br>
   <button>Add Friend</button>
 </form>
